--- a/Frontend/src/style.css
+++ b/Frontend/src/style.css
@@ -85,7 +85,7 @@ div.daysCard li{
     border-style: solid;
     background-color: #102542;
     
-    color: antiquewhite;
+    color: #f7fff7;
     float: left;
     display: inline-table;
     size: 100%;
@@ -110,10 +110,12 @@ div.weekCard li{
     background-color: #102542;
     color: #f7fff7;
     float: left;
+    padding: 5px;
     margin-left: 0%;
     display: inline-table;
     size: 120%;
 }
+
 
 div.right {
     float: right;
