--- a/Frontend/src/style.css
+++ b/Frontend/src/style.css
@@ -78,7 +78,7 @@ div.btn{
     border: #f7fff7;
     border-style: solid;
     vertical-align: middle;
-    padding: 1%;
+    padding: 10%;
 }
 
 div.buttonRight{
@@ -166,9 +166,7 @@ div.River{
     background-color: #102542;
     color: #f7fff7;
     padding: 5%;
-    margin: 5%;
-    margin-right: 0%;
-    margin-top: 0%;
+    margin: 0%;
 }
 
 div.aktivities{
@@ -188,6 +186,20 @@ div.bottom {
     margin: 5%;
     margin-right: 0%;
 }
+
+div.riverDiagramm{
+    position: fixed;
+    justify-content: center;
+    border-style: solid;
+    background-color: #102542;
+    color: #f7fff7;
+    padding: 5%;
+    padding-top: 0%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
 
 @media (min-width: 240px) and (orientation: portrait){
     
@@ -282,6 +294,19 @@ div.bottom {
         margin: 0%;
         width: 50%;
     }
+    div.riverDiagramm{
+        position: fixed;
+        justify-content: center;
+        border-style: solid;
+        background-color: #102542;
+        color: #f7fff7;
+        padding: 5%;
+        padding-top: 0%;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
 }
 
 @media (min-width: 1000px) and (max-width: 1124px) and (orientation: landscape){
