--- a/Frontend/src/style.css
+++ b/Frontend/src/style.css
@@ -32,7 +32,7 @@ div.element h2{
 
 div.left {
     float: left;
-    transform: scale(78%);
+    transform: scale(85%);
     transform-origin: 0 0;
 }
 
@@ -468,17 +468,16 @@ div.riverDiagramm{
     }
 }
 
-@media (min-width: 2550px) {
+@media (min-width: 2000px) and (orientation: landscape){
     div.left{
-        
-        transform: scale(1.5);
+        transform: scale(1.1);
         transform-origin: 0,0;
     }
     div.right{
-        transform: scale(1.3);
-        transform-origin: 0,0;
-        margin: 5%;
-        margin-top: 7%;
+        transform: scale(1.1);
+        transform-origin: top right;
+        margin: 0%;
+        margin-top: 1.5%;
     }
     div.River{
         margin-right: 10%;
