--- a/Frontend/src/style.css
+++ b/Frontend/src/style.css
@@ -166,12 +166,11 @@ div.warning{
 div.right {
     float: right;
     width: max-content;
-    transform: scale(0.94);
-    transform-origin: 0 0 0 0;
     padding-right: 0%;
     margin-top: 0%;
-    margin-right: 0%;
+    margin-right: 1.5%;
 }
+
 
 h2.River{
     padding: 1%;
@@ -183,6 +182,8 @@ div.River{
     color: #f7fff7;
     padding: 5%;
     margin: 0%;
+    transform: scale(85%);
+    transform-origin: top right;
 }
 
 div.aktivities{
@@ -190,7 +191,7 @@ div.aktivities{
     background-color: #102542;
     color: #f7fff7;
     padding: 5%;
-    margin: 5%;
+    margin: 2%;
     margin-right: 0%;
 }
 
@@ -200,7 +201,7 @@ div.bottom {
     color: #f7fff7;
     padding: 5%;
     padding-bottom: 3%;
-    margin: 5%;
+    margin: 2%;
     margin-right: 0%;
 }
 
