Cleaned up subsite riverDiagramm
Name changed, js link updated, css changed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,6 +213,7 @@ div.riverDiagramm{
     background-color: #102542;
     color: #f7fff7;
     padding: 5%;
+    padding-bottom: 3%;
     padding-top: 0%;
     left: 50%;
     top: 50%;
