--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,16 @@ div.element {
     font: url("/fonts/roboto.regular.ttf");
 }
 
+h2 {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font: url("/fonts/oswald-regular.ttf");
+}
+
+div.logo {
+    width: 100px;
+    height: auto;
+}
+
 #link{
     color: #102542;
     text-decoration: none;
