--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,16 +7,13 @@ body{
     white-space: nowrap;
     position: static;
     width: 100%;
-}
-
-div.element {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font: url("/fonts/roboto.regular.ttf");
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,Droid Sans, 'Helvetica Neue', sans-serif;
+    font: url("fonts/roboto.regular.ttf");
 }
 
 h2 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font: url("/fonts/oswald-regular.ttf");
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,Droid Sans, 'Helvetica Neue', sans-serif;
+    font: url("fonts/oswald-regular.ttf");
 }
 
 div.logo {
