--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,6 +189,7 @@ div.River{
     color: #f7fff7;
     padding: 5%;
     margin: 0%;
+    margin-bottom: 0%;
     transform: scale(85%);
     transform-origin: top right;
 }
@@ -207,9 +208,10 @@ div.bottom {
     border-style: solid;
     background-color: #102542;
     color: #f7fff7;
-    padding: 5%;
+    padding: 3%;
     padding-bottom: 3%;
-    margin: 2%;
+    margin: 3%;
+    margin-top: 0%;
     margin-right: 0%;
 }
 
